Update helm chart for exit node

--- a/charts/exit-node/templates/deployment.yaml
+++ b/charts/exit-node/templates/deployment.yaml
@@ -70,6 +70,7 @@ spec:
           ports:
             {{- range . }}
             - containerPort: {{ .port }}
+              protocol: {{ .protocol }}
             {{- end }}
           {{- end }}
           resources:
