--- a/charts/exit-node/values.yaml
+++ b/charts/exit-node/values.yaml
@@ -4,8 +4,10 @@ service:
   ports:
     - port: 3001
       name: "3001"
+      protocol: "TCP"
     - port: 8080
       name: "8080"
+      protocol: "TCP"
     - port: 9091
       name: "9091tcp"
       protocol: TCP
