--- a/.github/workflows/gcp-artifact-registry-test.yaml
+++ b/.github/workflows/gcp-artifact-registry-test.yaml
@@ -24,12 +24,12 @@ jobs:
           credentials_json: '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}'
 
       - name: Login to Artifact Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
-          registry: europe-west6-docker.pkg.dev
+          registry: ${{ secrets.GOOGLE_REGION }}-docker.pkg.dev
           username: oauth2accesstoken
           password: ${{ steps.auth.outputs.access_token }}
 
       # This example runs "docker login" directly to Artifact Registry.
       - run: |-
-          echo '${{ steps.auth.outputs.access_token }}' | docker login -u oauth2accesstoken --password-stdin https://REGION-docker.pkg.dev
+          echo '${{ steps.auth.outputs.access_token }}' | docker login -u oauth2accesstoken --password-stdin https://${{ secrets.GOOGLE_REGION }}-docker.pkg.dev
