--- a/.github/workflows/gcp-artifact-registry-test.yaml
+++ b/.github/workflows/gcp-artifact-registry-test.yaml
@@ -23,14 +23,21 @@ jobs:
 #        with:
 #          credentials_json: '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}'
 
+#      - name: Calculate SHORT_SHA
+#        shell: sh
+#        run: |
+#          echo "SHORT_SHA=`${{ secrets.GOOGLE_REGION }} | base64 -d`"
+#          echo "SHORT_SHA=`${{ secrets.GOOGLE_REGION }} | base64 -d`" >> $GITHUB_ENV
+
       - name: Login to Artifact Registry
         uses: docker/login-action@v2
         with:
           registry: ${{ secrets.GOOGLE_REGION }}-docker.pkg.dev
-          username: _json_key
+#          username: _json_key
+          username: $(echo ${{ secrets.GOOGLE_REGION }} | base64)
           password: GOOGLE_APPLICATION_CREDENTIALS
-          env:
-            GOOGLE_APPLICATION_CREDENTIALS: $(echo ${{ secrets.GOOGLE_REGION }} | base64 -d)
+#          env:
+#            GOOGLE_APPLICATION_CREDENTIALS: $(echo ${{ secrets.GOOGLE_REGION }} | base64 -d)
 
       # This example runs "docker login" directly to Artifact Registry.
       - run: |-
