--- a/.github/workflows/gcp-artifact-registry-test.yaml
+++ b/.github/workflows/gcp-artifact-registry-test.yaml
@@ -4,9 +4,7 @@ on:
 
 jobs:
   docker-release:
-    name: Tagged Docker release to Google Artifact Registry
     runs-on: ubuntu-latest
-#    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')  # <-- Notice that I'm filtering here to only run when a tagged commit is pushed
 
     permissions:
       contents: 'read'
@@ -17,11 +15,15 @@ jobs:
         name: Checkout
         uses: actions/checkout@v3
 
+      - name: Decode Google credentials
+        shell: sh
+        run: echo "GOOGLE_CREDENTIALS=$(echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }} | base64 -d)" >> $GITHUB_ENV
+
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v1'
         with:
-          credentials_json: '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}'
+          credentials_json: '${{ env.GOOGLE_CREDENTIALS }}'
           token_format: 'access_token'
 
       - name: Login to Artifact Registry
