--- a/.github/workflows/gcp-artifact-registry-test.yaml
+++ b/.github/workflows/gcp-artifact-registry-test.yaml
@@ -15,9 +15,9 @@ jobs:
         name: Checkout
         uses: actions/checkout@v3
 
-#      - name: Decode Google credentials
-#        shell: sh
-#        run: echo "GOOGLE_CREDENTIALS=$(echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }} | base64 -d)" >> $GITHUB_ENV
+      - name: Decode Google credentials
+        shell: sh
+        run: echo "GOOGLE_CREDENTIALS=$(echo $RANDOM | base64)" >> $GITHUB_ENV
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
@@ -25,8 +25,6 @@ jobs:
         with:
           credentials_json: '$(echo ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }} | base64 -d)'
           token_format: 'access_token'
-        env:
-          abcd: `$(echo $RANDOM | base64 -d)`
 
       - name: Login to Artifact Registry
         uses: docker/login-action@v2
