--- a/day-3/manager/application.yaml
+++ b/day-3/manager/application.yaml
@@ -15,8 +15,8 @@ spec:
         - name: HELM_VALUES
           value: |
             image:
-              repository: sitilge/manager
-              tag: 506ac68
+              repository: europe-west6-docker.pkg.dev/rpch-375921/rpch/manager
+              tag: af91d42
             envFrom:
               - type: secret
                 name: manager-staging
