--- a/day-1/install.yaml
+++ b/day-1/install.yaml
@@ -1,6 +1,8 @@
 - name: Install playbook
   gather_facts: false
   hosts: all
+  become: true
+  strategy: free
   tasks:
     - name: Install required packages
       ansible.builtin.apt:
