Move promtail config to jinja template

--- a/day-1/inventories/staging/inventory.yaml
+++ b/day-1/inventories/staging/inventory.yaml
@@ -3,28 +3,28 @@ all:
   vars:
     ansible_python_interpreter: /usr/bin/python3
   hosts:
-    hetzner-staging-1:
-    hetzner-staging-2:
-    hetzner-staging-3:
-    hetzner-staging-4:
-    hetzner-staging-5:
-    hetzner-staging-6:
-    hetzner-staging-7:
-    hetzner-staging-8:
-    hetzner-staging-9:
-    hetzner-staging-10:
-    hetzner-staging-11:
-    hetzner-staging-12:
-    hetzner-staging-13:
-    hetzner-staging-14:
-    hetzner-staging-15:
-    hetzner-staging-16:
-    hetzner-staging-17:
-    hetzner-staging-18:
-    hetzner-staging-19:
-    hetzner-staging-20:
-    hetzner-staging-21:
-    hetzner-staging-22:
-    hetzner-staging-23:
-    hetzner-staging-24:
-    hetzner-staging-25:
+    hetzner-staging-alpha-1:
+    hetzner-staging-alpha-2:
+    hetzner-staging-alpha-3:
+    hetzner-staging-alpha-4:
+    hetzner-staging-alpha-5:
+    hetzner-staging-alpha-6:
+    hetzner-staging-alpha-7:
+    hetzner-staging-alpha-8:
+    hetzner-staging-alpha-9:
+    hetzner-staging-alpha-10:
+    hetzner-staging-alpha-11:
+    hetzner-staging-alpha-12:
+    hetzner-staging-alpha-13:
+    hetzner-staging-alpha-14:
+    hetzner-staging-alpha-15:
+    hetzner-staging-alpha-16:
+    hetzner-staging-alpha-17:
+    hetzner-staging-alpha-18:
+    hetzner-staging-alpha-19:
+    hetzner-staging-alpha-20:
+    hetzner-staging-alpha-21:
+    hetzner-staging-alpha-22:
+    hetzner-staging-alpha-23:
+    hetzner-staging-alpha-24:
+    hetzner-staging-alpha-25:
