--- a/day-1/install.yaml
+++ b/day-1/install.yaml
@@ -101,22 +101,20 @@
           unzip promtail-linux-amd64.zip
           mv promtail-linux-amd64 /usr/local/bin/promtail
           chmod a+x /usr/local/bin/promtail
-          mkdir -p /etc/promtailf
-    - name: Upload promtail configuration
-      ansible.builtin.copy:
-        src: "{{ item.src }}"
-        dest: "{{ item.dest }}"
-      with_items:
-        - src: "{{ environment_name }}/{{ inventory_hostname }}/promtail-config.yaml"
-          dest: /etc/promtail/config.yaml
+          mkdir -p /etc/promtail
+    - name: Configure and upload promtail configuration
+      template:
+        src: promtail/config.j2
+        dest: /etc/promtail/config.yaml
     - name: Upload promtail service
       ansible.builtin.copy:
         src: promtail/promtail.service
         dest: /etc/systemd/system/promtail.service
-    - name: Start promtail
+    - name: Enable and start promtail
       ansible.builtin.shell:
         cmd: |
-          service promtail start
+          systemctl enable promtail
+          systemctl start promtail
     - name: Show results
       ansible.builtin.debug:
         var: output
