--- a/day-1/install.yaml
+++ b/day-1/install.yaml
@@ -93,6 +93,28 @@
       register: output
       tags:
         - rpch
+    - name: Install promtail
+      ansible.builtin.shell:
+        cmd: |
+          curl -s -O -L https://github.com/grafana/loki/releases/download/v2.8.4/promtail-linux-amd64.zip
+          apt-get install unzip
+          unzip promtail-linux-amd64.zip
+          mv promtail-linux-amd64 /usr/local/bin/promtail
+          chmod a+x /usr/local/bin/promtail
+          mkdir -p /etc/promtail
+    - name: Configure and upload promtail configuration
+      template:
+        src: promtail/config.j2
+        dest: /etc/promtail/config.yaml
+    - name: Upload promtail service
+      ansible.builtin.copy:
+        src: promtail/promtail.service
+        dest: /etc/systemd/system/promtail.service
+    - name: Enable and start promtail
+      ansible.builtin.shell:
+        cmd: |
+          systemctl enable promtail
+          systemctl start promtail
     - name: Show results
       ansible.builtin.debug:
         var: output
