--- a/day-1/show.yaml
+++ b/day-1/show.yaml
@@ -1,8 +1,6 @@
 - name: Show Environment Config
   gather_facts: true
-  hosts: all
-  become: true
-  strategy: free
+  hosts: entry_node,exit_node
   tasks:
     - name: "Read variables"
       ansible.builtin.set_fact:
@@ -13,7 +11,7 @@
         rpch_public_key: "{{ lookup('ansible.builtin.file', 'files/' + environment_name + '/' + inventory_hostname + '/.env-rpch') | regex_findall('^RPCH_PUBLIC_KEY=.*', multiline=True, ignorecase=True) | first | regex_replace('RPCH_PUBLIC_KEY=','') }}"
     - name: "Build JSON"
       ansible.builtin.set_fact:
-        rpch_properties: '{ "node": "{{ inventory_hostname }}", "chain_id": "100", "peer_id": "{{ peer_id }}", "native_address":  "{{ native_address }}", "hoprd_api_endpoint": "{{ hoprd_api_endpoint }}", "rpch_public_key": "{{ rpch_public_key }}" }'
+        rpch_properties: '{ "node": "{{ inventory_hostname }}", "node_type": "{{ node_type }}", "chain_id": "100", "peer_id": "{{ peer_id }}", "native_address":  "{{ native_address }}", "hoprd_api_endpoint": "{{ hoprd_api_endpoint }}", "rpch_public_key": "{{ rpch_public_key }}" }'
     - name: Print variables
       debug:
         var: rpch_properties
