Point to master

--- a/day-1/requirements.yaml
+++ b/day-1/requirements.yaml
@@ -3,5 +3,5 @@ roles:
   - name: "hopr.hoprd"
     src: "https://github.com/hoprnet/ansible-hoprd.git"
     scm: git
-    version: feature/first-version
+    version: master
 
