--- a/day-1/restart.yaml
+++ b/day-1/restart.yaml
@@ -1,6 +1,6 @@
 - name: Restart entry Nodes
   gather_facts: false
-  hosts: entry_node_a,entry_node_b,entry_node_c,exit_node_a,exit_node_b,exit_node_c
+  hosts: entry_node,exit_node,entry_node_a,entry_node_b,entry_node_c,exit_node_a,exit_node_b,exit_node_c
   become: true
   vars:
     clean_db: false
@@ -24,7 +24,7 @@
 
 - name: Restart exit Nodes
   gather_facts: false
-  hosts: exit_node_a,exit_node_b,exit_node_c
+  hosts: exit_node,exit_node_a,exit_node_b,exit_node_c
   become: true
   tasks:
     - name: Restart Exit Node service
