--- a/day-1/inventories/staging/group_vars/all/vars.yaml
+++ b/day-1/inventories/staging/group_vars/all/vars.yaml
@@ -5,3 +5,4 @@ ansible_ssh_common_args: "-F ./hcloud_ssh_config_rpch_staging"
 environment_name: "staging"
 
 hoprd_image_tag: latest
+rpch_exit_node_version: e22211a
