--- a/day-1/install-hoprd.yaml
+++ b/day-1/install-hoprd.yaml
@@ -2,8 +2,10 @@
   gather_facts: true
   hosts: entry_node,exit_node
   become: true
-  strategy: free
   tasks:
+    - name: Get VM index
+      set_fact:
+        index: "{{ ansible_hostname | split('-') | last }}"
     - name: "Setup Hoprd"
       ansible.builtin.include_role:
         name: hopr.hoprd
@@ -11,3 +13,63 @@
         hoprd_identity_file: "{{ environment_name }}/{{ inventory_hostname }}/.hoprd.id"
         hoprd_env_file: "{{ environment_name }}/{{ inventory_hostname }}/.env"
         hoprd_version: "{{ hoprd_image_tag }}"
+      tags:
+        - hoprd
+    - name: "Copy config file"
+      ansible.builtin.copy:
+        src: "hoprd-config.yaml"
+        dest: "/opt/hoprd/config.yaml"
+        owner: "root"
+        group: "root"
+        mode: "440"
+
+    - name: Restart Hoprd service
+      ansible.builtin.service:
+        name: "hoprd.service"
+        state: restarted
+        enabled: true
+      tags:
+        - hoprd
+
+    - name: Load Hoprd Json
+      set_fact:
+        hoprd_json: "{{ lookup('template','files/' + environment_name + '/' + inventory_hostname + '/hoprd.json') | from_json  }}"
+      tags:
+        - promtail
+
+    - name: Load metadata
+      set_fact:
+        peer_id: "{{ hoprd_json  | community.general.json_query('\".hoprd.id\".peer_id') }}"
+        native_address: "{{ hoprd_json  | community.general.json_query('\".hoprd.id\".native_address') }}"
+        safe_address: "{{ hoprd_json  | community.general.json_query('safe_address') }}"
+        module_address: "{{ hoprd_json  | community.general.json_query('module_address') }}"
+      tags:
+        - promtail
+
+    - name: Block metadata
+      set_fact: 
+        block_labels: |
+          peer_id: {{ peer_id }}
+          native_address: {{ native_address  }}
+          safe_address: {{ safe_address }}
+          module_address: {{ module_address }}
+      tags:
+        - promtail
+
+    - name: Customize Promtail
+      ansible.builtin.blockinfile:
+        path: /etc/promtail/config.yaml
+        marker: "          ## {mark} ANSIBLE MANAGED BLOCK "
+        insertafter: "static_labels"
+        block: "{{ block_labels | indent(width=10, first=True)}}"
+      tags:
+        - promtail
+
+    - name: Restart Promtail service
+      ansible.builtin.service:
+        name: "promtail.service"
+        state: restarted
+        enabled: true
+      tags:
+        - promtail
+
