--- a/day-1/inventories/staging/inventory.yaml
+++ b/day-1/inventories/staging/inventory.yaml
@@ -15,6 +15,23 @@ all:
         hetzner-staging-alpha-8:
         hetzner-staging-alpha-9:
         hetzner-staging-alpha-10:
+      children:
+        entry_node_a:
+          hosts:
+            hetzner-staging-alpha-1:
+            hetzner-staging-alpha-2:
+            hetzner-staging-alpha-3:
+        entry_node_b:
+          hosts:
+            hetzner-staging-alpha-4:
+            hetzner-staging-alpha-5:
+            hetzner-staging-alpha-6:
+        entry_node_c:
+          hosts:
+            hetzner-staging-alpha-7:
+            hetzner-staging-alpha-8:
+            hetzner-staging-alpha-9:
+            hetzner-staging-alpha-10:
     exit_node:
       hosts:
         hetzner-staging-alpha-11:
@@ -32,6 +49,28 @@ all:
         hetzner-staging-alpha-23:
         hetzner-staging-alpha-24:
         hetzner-staging-alpha-25:
+      children:
+        exit_node_a:
+          hosts:
+            hetzner-staging-alpha-11:
+            hetzner-staging-alpha-12:
+            hetzner-staging-alpha-13:
+            hetzner-staging-alpha-14:
+        exit_node_b:
+          hosts:
+            hetzner-staging-alpha-15:
+            hetzner-staging-alpha-16:
+            hetzner-staging-alpha-17:
+            hetzner-staging-alpha-18:
+            hetzner-staging-alpha-19:
+        exit_node_c:
+          hosts:
+            hetzner-staging-alpha-20:
+            hetzner-staging-alpha-21:
+            hetzner-staging-alpha-22:
+            hetzner-staging-alpha-23:
+            hetzner-staging-alpha-24:
+            hetzner-staging-alpha-25:
   hosts:
     hetzner-staging-alpha-1:
     hetzner-staging-alpha-2:
