--- a/day-1/inventories/staging/group_vars/all/vars.yaml
+++ b/day-1/inventories/staging/group_vars/all/vars.yaml
@@ -4,5 +4,6 @@ ansible_ssh_common_args: "-F ./hcloud_ssh_config_rpch_staging"
 
 environment_name: "staging"
 
-hoprd_image_tag: providence
+hoprd_version: providence
+hoprd_network: rotsee
 rpch_exit_node_version: 0.9.1
