Update staging resource

--- a/day-1/inventories/staging/group_vars/all/vars.yaml
+++ b/day-1/inventories/staging/group_vars/all/vars.yaml
@@ -4,6 +4,26 @@ ansible_ssh_common_args: "-F ./hcloud_ssh_config_rpch_staging"
 
 environment_name: "staging"
 
-hoprd_version: providence
+hoprd_version: 2.0.1
 hoprd_network: rotsee
 rpch_exit_node_version: 0.9.1
+
+hoprd:
+  config:
+    strategy:
+      promiscuous:
+        enabled: true
+        max_channels: 10
+        network_quality_threshold: 0.6
+        new_channel_stake: '1000000 HOPR'  # 1000 tickets
+        minimum_node_balance: '10000000 HOPR' # 10x new channel stake
+      autoFunding:
+        enabled: true
+        funding_amount: '1000000 HOPR' # 1000 tickets
+        min_stake_threshold: '100000 HOPR' # 100 tickets
+      aggregating:
+        enabled: true
+        aggregation_threshold: 100000
+      autoRedeeming:
+        enabled: true
+        redeem_only_aggregated: true
