--- a/day-1/install-server.yaml
+++ b/day-1/install-server.yaml
@@ -11,6 +11,7 @@
           - lsb-release
           - gnupg
           - git
+          - tmux
         state: latest
         update_cache: true
       tags:
