mount volume and update exit-node

--- a/day-1/files/.env-rpch-default
+++ b/day-1/files/.env-rpch-default
@@ -12,3 +12,6 @@ OPT_IN_METRICS="true"
 
 # Hoprd API Endpoint
 HOPRD_API_ENDPOINT=http://hoprd:3001
+
+# Used for request id store
+RPCH_DB_FILE="/app/db/store.sqlite3"
