--- a/day-1/inventories/staging/group_vars/all/vars.yaml
+++ b/day-1/inventories/staging/group_vars/all/vars.yaml
@@ -6,7 +6,7 @@ environment_name: "staging"
 
 hoprd_version: 2.0.1
 hoprd_network: rotsee
-rpch_exit_node_version: 0.10.0
+rpch_exit_node_version: 68b5ac9
 
 hoprd:
   config:
