--- a/day-1/inventories/staging/group_vars/all/vars.yaml
+++ b/day-1/inventories/staging/group_vars/all/vars.yaml
@@ -1,10 +1,11 @@
+---
 
 # SSH configuration
 ansible_ssh_common_args: "-F ./hcloud_ssh_config_rpch_staging"
 
 environment_name: "staging"
 
-hoprd_version: 2.0.3-rc.0-pr.5730
+hoprd_version: providence-latest
 hoprd_network: rotsee
 rpch_exit_node_version: 0.12.0
 
