update promiscious strategy and peer quality evaluation for staging nodes

--- a/day-1/inventories/staging/group_vars/all/vars.yaml
+++ b/day-1/inventories/staging/group_vars/all/vars.yaml
@@ -15,7 +15,7 @@ hoprd:
       promiscuous:
         enabled: true
         max_channels: 10
-        network_quality_threshold: 0.6
+        network_quality_threshold: 0.5
         new_channel_stake: '1000000 HOPR'  # 1000 tickets
         minimum_node_balance: '10000000 HOPR' # 10x new channel stake
         min_network_size_samples: 20
@@ -29,3 +29,5 @@ hoprd:
       autoRedeeming:
         enabled: true
         redeem_only_aggregated: true
+    network_options:
+      quality_avg_window_size: 100
