--- a/day-1/inventories/staging/group_vars/all/vars.yaml
+++ b/day-1/inventories/staging/group_vars/all/vars.yaml
@@ -6,7 +6,7 @@ ansible_ssh_common_args: "-F ./hcloud_ssh_config_rpch_staging"
 environment_name: "staging"
 
 hoprd_version: saint-louis-latest
-rpch_exit_node_version: 1.2.0
+rpch_exit_node_version: pr-1
 
 hoprd_config: |
   hopr:
