replace rpch exit node with phttp exit application (#74)
* initial quick container switch

* updated secrets

* update default provider

* renamed everything to pHTTP exit app

* deploy latest version

--- a/day-1/files/.env-rpch-default
+++ b/day-1/files/.env-rpch-default
@@ -1,8 +1,5 @@
 # What logs to print
-DEBUG="rpch*,-*cache*"
-
-# The path to the identity file of the exit node
-RPCH_IDENTITY_FILE="/app/db/.rpch-id"
+DEBUG="*,-*cache*"
 
 # amount of ms that a request is valid
 RESPONSE_TIMEOUT=
@@ -11,7 +8,7 @@ RESPONSE_TIMEOUT=
 OPT_IN_METRICS="true"
 
 # Hoprd API Endpoint
-HOPRD_API_ENDPOINT=http://hoprd:3001
+PHTTP_EA_HOPRD_ENDPOINT=http://hoprd:3001
 
 # Used for request id store
-RPCH_DB_FILE="/app/db/store.sqlite3"
+PHTTP_EA_DATABASE_FILE="/app/db/store.sqlite3"
