--- a/day-1/inventories/staging/group_vars/all/vars.yaml
+++ b/day-1/inventories/staging/group_vars/all/vars.yaml
@@ -6,13 +6,13 @@ ansible_ssh_common_args: "-F ./hcloud_ssh_config_rpch_staging"
 environment_name: "staging"
 
 hoprd_version: saint-louis-latest
-rpch_exit_node_version: 1.2.0
+phttp_exit_app_version: 2.0.0
 
 hoprd_config: |
   hopr:
     chain:
       network: rotsee
-      provider: https://primary.gnosis-chain.rpc.hoprtech.net
+      provider: https://gnosis-provider.rpch.tech
     strategy:
       on_fail_continue: true
       allow_recursive: false
