--- a/day-1/inventories/staging/group_vars/all/vars.yaml
+++ b/day-1/inventories/staging/group_vars/all/vars.yaml
@@ -16,7 +16,6 @@ hoprd_config: |
     strategy:
       on_fail_continue: true
       allow_recursive: false
-      finalize_channel_closure: true
       strategies:
         - !Promiscuous
           max_channels: 10
@@ -36,3 +35,6 @@ hoprd_config: |
           aggregate_on_channel_close: true
         - !AutoRedeeming
           redeem_only_aggregated: True
+          on_close_redeem_single_tickets_value_min: "2000000000000000000 HOPR"
+        - !ClosureFinalizer
+          max_closure_overdue: 3600
